cmake_minimum_required(VERSION 3.2)

PROJECT(dmeventpp)

LIST(APPEND CMAKE_MODULE_PATH ${CMAKE_CURRENT_SOURCE_DIR}/cmake)
INCLUDE(cmake/ModuleImport.cmake)
INCLUDE(cmake/ModuleCompileOptions.cmake)
ModuleSetCompileOptions()

SET(DMEVENTPP_VERSION_MAJOR "1")
SET(DMEVENTPP_VERSION_MINOR "0")
SET(DMEVENTPP_VERSION_PATCH "1")
SET(DMEVENTPP_VERSION "${DMEVENTPP_VERSION_MAJOR}.${DMEVENTPP_VERSION_MINOR}.${DMEVENTPP_VERSION_PATCH}")

MESSAGE(STATUS "VERSION: ${DMEVENTPP_VERSION}")

OPTION(USE_DMEVENTPP "use dmeventpp" OFF)

ExeImport("test" "")
