cmake_minimum_required(VERSION 3.21)

PROJECT(dmeventpp)

LIST(APPEND CMAKE_MODULE_PATH ${CMAKE_CURRENT_SOURCE_DIR}/cmake)
INCLUDE(cmake/ModuleImport.cmake)
INCLUDE(cmake/ModuleCompileOptions.cmake)
ModuleSetCompileOptions()

SET(CMAKE_CXX_STANDARD 17)
SET(CMAKE_CXX_STANDARD_REQUIRED ON)

SET(DMEVENTPP_VERSION_MAJOR "1")
SET(DMEVENTPP_VERSION_MINOR "0")
SET(DMEVENTPP_VERSION_PATCH "1")
SET(DMEVENTPP_VERSION "${DMEVENTPP_VERSION_MAJOR}.${DMEVENTPP_VERSION_MINOR}.${DMEVENTPP_VERSION_PATCH}")

MESSAGE(STATUS "VERSION: ${DMEVENTPP_VERSION}")

OPTION(USE_DMEVENTPP "use dmeventpp" OFF)

InterfaceImport("dmeventpp" "include" "")

if(PROJECT_IS_TOP_LEVEL)
    ExeImport("test" "dmeventpp")
endif()
